src-tauri/error_v2.txt
   Compiling app v0.1.0 (C:\Users\Yannick\Desktop\programming\organizer application\src-tauri)
warning: unused import: `std::collections::HashMap`
 --> src\models.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PathBuf`
 --> src\projects.rs:1:23
  |
1 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: unused import: `PathBuf`
 --> src\scanner.rs:4:23
  |
4 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

error[E0382]: borrow of moved value: `operations`
  --> src\planner.rs:74:51
   |
 8 |     let mut operations = Vec::new();
   |         -------------- move occurs because `operations` has type `Vec<FileOperation>`, which does not implement the `Copy` trait
...
73 |         operations,
   |         ---------- value moved here
74 |         summary: format!("Planned {} operations", operations.len()),
   |                                                   ^^^^^^^^^^ value borrowed here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
73 |         operations: operations.clone(),
   |                   ++++++++++++++++++++

warning: value assigned to `final_name` is never read
  --> src\planner.rs:39:34
   |
39 |             let mut final_name = file.name.clone();
   |                                  ^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0382`.
warning: `app` (lib) generated 4 warnings
error: could not compile `app` (lib) due to 1 previous error; 4 warnings emitted
